# gperf2json

./: flake.nix  gperf2json.cc  meson.build  meson_options.txt
